--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="biz.cunning.cunning_document_scanner_example">
     <application
-        android:label="cunning_document_scanner_example"
+        android:label="DocScanner"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
