--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,12 +1,12 @@
-name: cunning_document_scanner_example
-description: Demonstrates how to use the cunning_document_scanner plugin.
+name: doc_scanner
+description: A document scanning application with OCR capabilities.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.15.1 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -15,17 +15,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  path_provider: ^2.1.5
   flutter:
     sdk: flutter
-
-  cunning_document_scanner:
-    # When depending on this package from a real application you should use:
-    #   cunning_document_scanner: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    path: ../
+  cunning_document_scanner: ^1.0.0
+  camera: ^0.10.5+9
+  image: ^4.1.3
+  path_provider: ^2.1.1
+  http: ^1.1.0
+  image_picker: ^1.0.4
+  opencv_dart: ^1.0.4
+  pdf: ^3.10.7
+  share_plus: ^10.0.0
+  dio: ^5.3.3
+  flutter_image_compress: ^2.1.0
+  image_cropper: ^8.0.2
+  permission_handler: ^12.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,13 +38,19 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^6.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
+  remove_alpha_ios: true
+  adaptive_icon_background: "#1976D2"
+  adaptive_icon_foreground: "assets/icon/icon.png"
+  adaptive_icon_mask: true
+  adaptive_icon_padding: true
+  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
